force-app/main/default/objects/Account/fields/Duplicate_Email__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Email</label>
    <type>Checkbox</type>
</CustomField>