force-app/main/default/objects/Account/fields/E_mail_Bounced__c.field-meta.xml
<CustomField>
    <fullName>E_mail_Bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-mail Bounced</label>
    <type>Checkbox</type>
</CustomField>