force-app/main/default/objects/Account/fields/Early_Warning_System_Match__c.field-meta.xml
<CustomField>
    <fullName>Early_Warning_System_Match__c</fullName>
    <label>Early Warning System Match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>