force-app/main/default/objects/Account/fields/EBR_Captured__c.field-meta.xml
<CustomField>
    <fullName>EBR_Captured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EBR capturing from Bright Pattern popup</description>
    <label>EBR Captured</label>
    <type>Checkbox</type>
</CustomField>