force-app/main/default/objects/Account/fields/EBR_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>EBR_Expiration_Date__c</fullName>
    <description>Capturing EBR Expiration Date</description>
    <label>EBR Expiration Date</label>
    <type>Date</type>
</CustomField>