force-app/main/default/objects/Account/fields/eLot_Sequence__c.field-meta.xml
<CustomField>
    <fullName>eLot_Sequence__c</fullName>
    <label>eLot Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>