force-app/main/default/objects/Account/fields/eLot_Sort__c.field-meta.xml
<CustomField>
    <fullName>eLot_Sort__c</fullName>
    <label>eLot Sort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>