force-app/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This field having picklist values</description>
    <label>Verbal Consent Email</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level1</fullName>
            </value>
            <value>
                <fullName>Level2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>