force-app/main/default/objects/Account/fields/Email_Collected__c.field-meta.xml
<CustomField>
    <fullName>Email_Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to trigger lookup inserts via lookup helper.</description>
    <label>Email Collected</label>
    <type>Checkbox</type>
</CustomField>