force-app/main/default/objects/Account/fields/Email_included_in_Hot_Leads__c.field-meta.xml
<CustomField>
    <fullName>Email_included_in_Hot_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email included in Hot Leads</label>
    <type>Checkbox</type>
</CustomField>