force-app/main/default/objects/Account/fields/ExtPushID__c.field-meta.xml
<CustomField>
    <fullName>ExtPushID__c</fullName>
    <description>Only used to connect external exports.  Do not delete.</description>
    <displayFormat>{0}</displayFormat>
    <label>ExtPushID</label>
    <type>AutoNumber</type>
</CustomField>