force-app/main/default/objects/Account/fields/fAccountID__c.field-meta.xml
<CustomField>
    <fullName>fAccountID__c</fullName>
    <formula>PersonContact.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fAccountID</label>
    <type>Text</type>
</CustomField>