force-app/main/default/objects/Account/fields/FAddress__c.field-meta.xml
<CustomField>
    <fullName>FAddress__c</fullName>
    <formula>Street__c +&quot;, &quot; + City__c  +&quot;, &quot; +  TEXT(State__c) +&quot;, &quot; +   Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FAddress</label>
    <type>Text</type>
</CustomField>