force-app/main/default/objects/Account/fields/fDelivery_Date__c.field-meta.xml
<CustomField>
    <fullName>fDelivery_Date__c</fullName>
    <formula>Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fDelivery Date</label>
    <type>Date</type>
</CustomField>