force-app/main/default/objects/Account/fields/fEmail__c.field-meta.xml
<CustomField>
    <fullName>fEmail__c</fullName>
    <description>Used to store the user email who edited a field. 
Needed for the inserts via lookup helper.</description>
    <formula>PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fEmail</label>
    <type>Text</type>
</CustomField>