force-app/main/default/objects/Account/fields/FileNumber__c.field-meta.xml
<CustomField>
    <fullName>FileNumber__c</fullName>
    <description>File Number from Ion Data</description>
    <externalId>true</externalId>
    <label>FileNumber</label>
    <length>15</length>
    <type>Text</type>
</CustomField>