force-app/main/default/objects/Account/fields/Flooring_Status__c.field-meta.xml
<CustomField>
    <fullName>Flooring_Status__c</fullName>
    <label>Flooring Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>