force-app/main/default/objects/Account/fields/Focused_On_Growing__c.field-meta.xml
<CustomField>
    <fullName>Focused_On_Growing__c</fullName>
    <label>Focused On Growing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>