force-app/main/default/objects/Account/fields/Footnotes__c.field-meta.xml
<CustomField>
    <fullName>Footnotes__c</fullName>
    <label>Footnotes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>