force-app/main/default/objects/Account/fields/Formula_Scan_Code__c.field-meta.xml
<CustomField>
    <fullName>Formula_Scan_Code__c</fullName>
    <formula>SUBSTITUTE(LEFT( Scan_Code__c,9), &quot; &quot;,&quot;&quot;)&amp; RIGHT(Scan_Code__c, 4)</formula>
    <label>Formula Scan Code</label>
    <type>Text</type>
</CustomField>