force-app/main/default/objects/Account/fields/Forward_to_After_Activation__c.field-meta.xml
<CustomField>
    <fullName>Forward_to_After_Activation__c</fullName>
    <description>Number to forward to once they have activated and opted in.</description>
    <label>Forward to After Activation</label>
    <type>Phone</type>
</CustomField>