force-app/main/default/objects/Account/fields/fPersonMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>fPersonMobilePhone__c</fullName>
    <formula>Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fPersonMobilePhone</label>
    <type>Text</type>
</CustomField>