force-app/main/default/objects/Account/fields/fRecording_Date__c.field-meta.xml
<CustomField>
    <fullName>fRecording_Date__c</fullName>
    <formula>IF(  ISNULL(Recording_Date__c) ,  IF(ISNULL( Sale_Date__c ),   DATEVALUE( CreatedDate ) , Sale_Date__c) , Recording_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fRecording Date</label>
    <type>Date</type>
</CustomField>