force-app/main/default/objects/Account/fields/fShipping_State__c.field-meta.xml
<CustomField>
    <fullName>fShipping_State__c</fullName>
    <formula>TEXT ( Primary_Shipping_State__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fShipping State</label>
    <type>Text</type>
</CustomField>