force-app/main/default/objects/Account/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding Source</label>
    <type>Checkbox</type>
</CustomField>