force-app/main/default/objects/Account/fields/Garage_Doors_Status__c.field-meta.xml
<CustomField>
    <fullName>Garage_Doors_Status__c</fullName>
    <label>Garage Doors Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>