force-app/main/default/objects/Account/fields/Garage_Floor_Coating_Status__c.field-meta.xml
<CustomField>
    <fullName>Garage_Floor_Coating_Status__c</fullName>
    <label>Garage Floor Coating Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>