force-app/main/default/objects/Account/fields/Garage_Operation__c.field-meta.xml
<CustomField>
    <fullName>Garage_Operation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garage Operation</label>
    <type>Checkbox</type>
</CustomField>