force-app/main/default/objects/Account/fields/Gate_Code__c.field-meta.xml
<CustomField>
    <fullName>Gate_Code__c</fullName>
    <label>Gate Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>