force-app/main/default/objects/Account/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>It holds the gender name of the customer</description>
    <label>Gender</label>
    <length>100</length>
    <type>Text</type>
</CustomField>