force-app/main/default/objects/Account/fields/Gift_Card_Order__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift Card Order</label>
    <referenceTo>Gift_Card_Orders__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>