force-app/main/default/objects/Account/fields/Go_to_Waze_LatLong__c.field-meta.xml
<CustomField>
    <fullName>Go_to_Waze_LatLong__c</fullName>
    <formula>HYPERLINK(&apos;https://waze.com/ul?ll=&apos;+ TEXT(BillingLatitude)+&apos;,&apos;+ TEXT(BillingLongitude)+&apos;&amp;navigate=yes&amp;z=10&apos;, &apos;Go to Waze - LatLong&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waze - LatLong</label>
    <type>Text</type>
</CustomField>