force-app/main/default/objects/Account/fields/Google_Maps_Address__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps_Address__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/maps/dir/?api=1&amp;destination=&apos;+ BillingStreet +&apos;%2C&apos;+ BillingCity +&apos;%2C&apos;+ BillingState +&apos;%2C&apos;+ BillingPostalCode+&apos;&amp;travelmode= transit&apos;, &apos;Google Maps - Address&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Maps - Address</label>
    <type>Text</type>
</CustomField>