force-app/main/default/objects/Account/fields/Google_Maps_LatLong__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps_LatLong__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/maps/dir/?api=1&amp;destination&apos;+ TEXT(BillingLatitude)+&apos;%2C&apos;+ TEXT(BillingLongitude)+&apos;&amp;travelmode=transit&apos;, &apos;Google Maps - LatLong&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Maps - LatLong</label>
    <type>Text</type>
</CustomField>