force-app/main/default/objects/Account/fields/Handy_Man_Status__c.field-meta.xml
<CustomField>
    <fullName>Handy_Man_Status__c</fullName>
    <label>Handy Man Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>