force-app/main/default/objects/Account/fields/Has_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Has_Spouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Spouse</label>
    <type>Checkbox</type>
</CustomField>