force-app/main/default/objects/Account/fields/Home_Automation_Status__c.field-meta.xml
<CustomField>
    <fullName>Home_Automation_Status__c</fullName>
    <label>Home Automation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>