force-app/main/default/objects/Account/fields/Homeowner_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_2_Email__c</fullName>
    <label>Homeowner #2 Email</label>
    <type>Email</type>
</CustomField>