force-app/main/default/objects/Account/fields/Homeowner_2_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_2_Mobile__c</fullName>
    <label>Homeowner #2 Mobile</label>
    <type>Phone</type>
</CustomField>