force-app/main/default/objects/Account/fields/Homeowner__c.field-meta.xml
<CustomField>
    <fullName>Homeowner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Homeowner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Homeowner)</relationshipLabel>
    <relationshipName>Accounts_Homeowner</relationshipName>
    <type>Lookup</type>
</CustomField>