force-app/main/default/objects/Account/fields/Hot_Leads_Tier_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Hot_Leads_Tier_1_Date__c</fullName>
    <formula>IF( OR(
        ISNULL(Respond_Date__c),
        PersonDoNotCall = TRUE,
        PersonHasOptedOutOfEmail ),
    NUll,
    Respond_Date__c + 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hot Leads Tier 1 Date</label>
    <type>Date</type>
</CustomField>