force-app/main/default/objects/Account/fields/HVAC_Status__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Status__c</fullName>
    <label>HVAC Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>