force-app/main/default/objects/Account/fields/I_Accept_Terms__c.field-meta.xml
<CustomField>
    <fullName>I_Accept_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I Accept Terms</label>
    <type>Checkbox</type>
</CustomField>