force-app/main/default/objects/Account/fields/Id_SendGrid__c.field-meta.xml
<CustomField>
    <fullName>Id_SendGrid__c</fullName>
    <label>Id SendGrid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>