force-app/main/default/objects/Account/fields/Imported_x_days_after_recording__c.field-meta.xml
<CustomField>
    <fullName>Imported_x_days_after_recording__c</fullName>
    <formula>IF( AND(DATEVALUE(  CreatedDate  ) -  Recording_Date__c  &lt; 21 , NOT( ISBLANK( Recording_Date__c ))) , DATEVALUE(CreatedDate) - Recording_Date__c , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imported x days after recording</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>