force-app/main/default/objects/Account/fields/Include_in_Terms_and_conditions__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Terms_and_conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Terms and Conditions</label>
    <type>Checkbox</type>
</CustomField>