force-app/main/default/objects/Account/fields/inContact_Dialer_Campaign__c.field-meta.xml
<CustomField>
    <fullName>inContact_Dialer_Campaign__c</fullName>
    <label>Dialer Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-7 Days</fullName>
            </value>
            <value>
                <fullName>8-29 Days</fullName>
            </value>
            <value>
                <fullName>31-60 Days</fullName>
            </value>
            <value>
                <fullName>61-90 Days</fullName>
            </value>
            <value>
                <fullName>Postgrading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>