force-app/main/default/objects/Account/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Industry</label>
    <type>Checkbox</type>
</CustomField>