force-app/main/default/objects/Account/fields/Installation_Company__c.field-meta.xml
<CustomField>
    <fullName>Installation_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Company</label>
    <type>Checkbox</type>
</CustomField>