force-app/main/default/objects/Account/fields/IntacctID__c.field-meta.xml
<CustomField>
    <fullName>IntacctID__c</fullName>
    <label>Intacct Customer ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>