force-app/main/default/objects/Account/fields/Interests__c.field-meta.xml
<CustomField>
    <fullName>Interests__c</fullName>
    <label>Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Bath</fullName>
            </value>
            <value>
                <fullName>Blinds &amp; Shutters</fullName>
            </value>
            <value>
                <fullName>Closet Organization</fullName>
            </value>
            <value>
                <fullName>Garage Floor Coating</fullName>
            </value>
            <value>
                <fullName>Addition(s)</fullName>
            </value>
            <value>
                <fullName>Garage Organization</fullName>
            </value>
            <value>
                <fullName>Handyman</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
            <value>
                <fullName>Security Doors</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Landscape Design/Installation</fullName>
            </value>
            <value>
                <fullName>Pool</fullName>
            </value>
            <value>
                <fullName>Pool Design/Installation</fullName>
            </value>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>Sunroom Patio Enclosure</fullName>
            </value>
            <value>
                <fullName>Landscape Maintenance</fullName>
            </value>
            <value>
                <fullName>Pool Maintenance</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Garage Doors</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Water Filtration</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Smart Home Automation</fullName>
            </value>
            <value>
                <fullName>TV &amp; Internet</fullName>
            </value>
            <value>
                <fullName>Locksmith</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>