force-app/main/default/objects/Account/fields/Internet_Cable_Satellite_Status__c.field-meta.xml
<CustomField>
    <fullName>Internet_Cable_Satellite_Status__c</fullName>
    <label>Internet, Cable, Satellite Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>