force-app/main/default/objects/Account/fields/Invalid_Email_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Email_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid Email Deleted</label>
    <type>Checkbox</type>
</CustomField>