force-app/main/default/objects/Account/fields/Inventory_Created__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It indicates hot lead inventory created or not.</description>
    <label>Inventory Created</label>
    <type>Checkbox</type>
</CustomField>