force-app/main/default/objects/Account/fields/Ip_Consent__c.field-meta.xml
<CustomField>
    <fullName>Ip_Consent__c</fullName>
    <label>Ip Consent</label>
    <length>25</length>
    <type>Text</type>
</CustomField>