force-app/main/default/objects/Account/fields/IPDatatel__c.field-meta.xml
<CustomField>
    <fullName>IPDatatel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IPDatatel</label>
    <type>Checkbox</type>
</CustomField>