force-app/main/default/objects/Account/fields/Is_Test_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test Account?</label>
    <type>Checkbox</type>
</CustomField>