force-app/main/default/objects/Account/fields/IsPersonAccount__c.field-meta.xml
<CustomField>
    <fullName>IsPersonAccount__c</fullName>
    <formula>IsPersonAccount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsPersonAccount</label>
    <type>Checkbox</type>
</CustomField>