force-app/main/default/objects/Account/fields/IsPotentialDuplicate__c.field-meta.xml
<CustomField>
    <fullName>IsPotentialDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be enabled as true if it is duplicate record</description>
    <label>IsPotentialDuplicate</label>
    <type>Checkbox</type>
</CustomField>