force-app/main/default/objects/Account/fields/Issues__c.field-meta.xml
<CustomField>
    <fullName>Issues__c</fullName>
    <description>Working with Chris to build out the delivery issues.  Do not delete.  (Building Out)</description>
    <inlineHelpText>Working with Chris to build out the delivery issues.</inlineHelpText>
    <label>Issues</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>