force-app/main/default/objects/Account/fields/Kitchen_Bath_Status__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Bath_Status__c</fullName>
    <label>Kitchen &amp; Bath Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>