force-app/main/default/objects/Account/fields/Kunnect_Email_Rep_Username__c.field-meta.xml
<CustomField>
    <fullName>Kunnect_Email_Rep_Username__c</fullName>
    <label>Kunnect Email Rep Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>