force-app/main/default/objects/Account/fields/Last_Canvasser_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Canvasser_Attempt__c</fullName>
    <label>Last Canvasser Attempt</label>
    <type>DateTime</type>
</CustomField>