force-app/main/default/objects/Account/fields/Lead_Distribution_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Distribution_Email__c</fullName>
    <label>Lead Distribution Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>