force-app/main/default/objects/Account/fields/Lead_Distribution_Method__c.field-meta.xml
<CustomField>
    <fullName>Lead_Distribution_Method__c</fullName>
    <label>Lead Distribution Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>