force-app/main/default/objects/Account/fields/Lead_Distribution_Slack_Channel__c.field-meta.xml
<CustomField>
    <fullName>Lead_Distribution_Slack_Channel__c</fullName>
    <label>Lead Distribution Slack Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>